# trust-platform

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml
crates/trust-expression-eval/: Cargo.toml
crates/trust-expression-eval/src/: error.rs  evaluator.rs  lib.rs  types.rs
crates/trust-runtime/src/: bundle_template.rs  execution_backend.rs  memory.rs  metrics.rs  settings.rs
crates/trust-runtime/src/bytecode/validate/: pou_and_instr.rs
crates/trust-runtime/src/config/: tests.rs
crates/trust-runtime/src/control/: status_handlers.rs
crates/trust-runtime/src/control/tests/: core.rs
crates/trust-runtime/src/runtime/: backend.rs  bytecode.rs  core.rs  cycle.rs  mod.rs
crates/trust-runtime/src/runtime/core/: accessors.rs  lifecycle.rs
crates/trust-runtime/src/runtime/vm/: call.rs  dispatch.rs  dispatch_refs.rs  errors.rs  frames.rs  mod.rs  stack.rs
crates/trust-runtime/src/web/ui/wasm/: worker.js  (+1 more)
crates/trust-runtime/tests/: api_smoke.rs  bytecode_vm_core.rs  bytecode_vm_differential.rs
crates/trust-wasm-analysis/: Cargo.toml
crates/trust-wasm-analysis/src/: lib.rs
crates/trust-wasm-analysis/src/lib/: lib_part_01.rs  lib_part_05.rs  lib_part_06.rs
docs/demo/wasm/: trust_wasm_analysis.js  trust_wasm_analysis_bg.wasm
docs/diagrams/: manifest.json
docs/diagrams/architecture/: runtime-execution.puml
editors/vscode/: package-lock.json  package.json
editors/vscode/src/hmi-panel/: navigation.ts
scripts/: build_browser_analysis_wasm_spike.sh  build_wasm.sh  runtime_vm_bench_gate.sh  runtime_vm_production_backend_guard.sh  salsa_fuzz_gate.sh
(+6 files in other folders)
